Integration finale : Modules Rendez-vous, Parapharmacie, APIs avec GestionUser